--- a/index.html
+++ b/index.html
@@ -6,18 +6,151 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Analysis</title>
+        <style>
+            body {
+                background-color: #f2f2f2;
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+            }
+
+            h1 {
+                text-align: center;
+                margin-top: 30px;
+            }
+
+            .container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                min-height: 60vh;
+                padding: 20px;
+                box-sizing: border-box;
+            }
+
+            .inputContainer {
+                max-width: 400px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: #fff;
+                border-radius: 5px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            }
+
+            label {
+                display: block;
+                margin-bottom: 10px;
+                font-weight: bold;
+            }
+
+            input[type="text"] {
+                width: 100%;
+                padding: 10px;
+                border: 1px solid #ccc;
+                border-radius: 3px;
+                box-sizing: border-box;
+                font-size: 14px;
+            }
+
+            input[type="submit"] {
+                padding: 10px 20px;
+                background-color: #4CAF50;
+                color: #fff;
+                border: none;
+                border-radius: 3px;
+                font-size: 14px;
+                cursor: pointer;
+            }
+
+            input[type="submit"]:hover {
+                background-color: #45a049;
+            }
+
+            .table-container {
+                text-align: center;
+                margin-top: 40px;
+            }
+
+            .table-wrapper {
+                display: inline-block;
+                max-width: 800px;
+                padding: 20px;
+                /* background-color: yellow; */
+                border-radius: 5px;
+                /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
+                overflow-x: auto;
+            }
+
+            table {
+                width: 100%;
+                /* border-collapse: collapse; */
+                border-style: double;
+                border-color: white;
+                border-width: 7px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            }
+
+            th,
+            td {
+                padding: 14px;
+                border-bottom: 1px solid #ddd;
+            }
+
+            td {
+                background-color: white;
+            }
+
+            th {
+                background-color: #f2f2f2;
+            }
+
+            /* tr:nth-child(even) {
+                background-color: #f9f9f9;
+            } */
+            tr:hover {
+                background-color: #f5f5f5;
+            }
+        </style>
     </head>
 
     <body>
-        <form action="/analyse" method="POST">
-            <div class="inputContainer">
-                <label for="message">Enter Plaintext:</label>
-                <input type="text" id="message" name="message" required>
-                <br>
-                <br>
-                <input type="submit" value="Submit">
+        <div class="container">
+            <div>
+                <h1>Comparison between RSA, McEliece & Kyber</h1>
+                <form action="/analyse" method="POST">
+                    <div class="inputContainer">
+                        <label for="message">Enter Plaintext:</label>
+                        <input type="text" id="message" name="message" required>
+                        <br><br>
+                        <input type="submit" value="Submit">
+                    </div>
+                </form>
+                <div id="resultContainer" class="table-container">
+                    <div class="table-wrapper">
+                        <!-- The server response will be inserted here -->
+                    </div>
+                </div>
             </div>
-        </form>
+        </div>
+        <script>
+            // Function to submit the form and handle the server response
+            function submitForm(event) {
+                event.preventDefault();
+                const message = document.getElementById('message').value;
+                const xhr = new XMLHttpRequest();
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        document.getElementById('resultContainer').innerHTML = xhr.responseText;
+                    }
+                };
+                xhr.open('POST', '/analyse', true);
+                xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                xhr.send('message=' + encodeURIComponent(message));
+            }
+
+            // Add event listener to the form submission
+            document.querySelector('form').addEventListener('submit', submitForm);
+        </script>
     </body>
 
 </html>
